<resources>
    <string name="app_name">Easy Call &amp; Answer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dialer">Dialer</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_recent_calls">Calls</string>
    <string name="menu_settings">Settings</string>
    <string name="decline_button">Decline</string>
    <string name="accept_button">Accept</string>
    <string name="call_capital">Call</string>
    <string name="back_capital">Back</string>
    <string name="contacts_capital">Contacts</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="conference">Conference</string>
    <string name="call_waiting">Call Waiting</string>
    <string name="calling_capital">Calling…</string>
    <string name="save_gold_number">Save Gold Number</string>
    <string name="enter_gold_phone_number">Enter Gold phone number</string>
    <string name="start_typing_contact_name">Start typing contact name</string>
    <string name="existing_contact">Existing contact:</string>
    <string name="save_existing_contact">Save existing contact</string>
    <string name="save_phone_number">Save phone number</string>
    <string name="phone_number">Phone number:</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="call_gold_number">Call Gold Number</string>
    <string name="call_entered_number">Call entered number</string>
    <string name="contact_name">Contact name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="close_window">Close window</string>
    <string name="birthday_capital">Birthday</string>
    <string name="name_capital">Name</string>
    <string name="remind_me_capital">Remind me</string>
    <string name="remind_me_about_this_birthday">Remind me about this birthday</string>
    <string name="save_contact">Save Contact</string>
    <string name="enter_contact_name">Enter Contact name</string>
    <string name="please_select_birthdate">Please select birthdate</string>
    <string name="birthdate_capital">Birthdate</string>
    <string name="approve_read_phone_calls_log">Grant Call Log permission</string>
    <string name="no_permissions_caption">No Permissions</string>
    <string name="approve_view_calls_permission">Grant View Call History permission</string>
    <string name="the_app_needs_view_calls_permission_in_order_to_show_the_call">The app needs View Calls permission in order to show calls history</string>
    <string name="the_application_needs_contacts_permission_in_order_to_show_the_contacts_screen">The app needs Contacts permission in order to show the Contacts screen</string>
    <string name="permissions_capital">Permissions</string>
    <string name="help_capital">Help</string>
    <string name="tour_capital">Tour</string>
    <string name="favourites_capital">Favourites</string>
    <string name="outgoing_calls_are_currently_restricted_to_favorites">Outgoing calls are currently restricted to Favorites. To enable this feature, please go to Settings. You can still call your Gold Number, if set.</string>
    <string name="outgoing_calls_are_currently_restricted_to_contacts">Outgoing calls are currently restricted to Contacts. To enable this feature, please go to Settings. You can still call your Gold Number, if set.</string>
    <string name="outgoing_calls_are_currently_turned_off">Outgoing calls are currently turned off. To enable this feature, please go to Settings. You can still call your Gold Number, if set.</string>
    <string name="no_permission_to_view_contacts_caption">No permission to view Contacts</string>
    <string name="no_permission_to_view_calls">No permission to view Calls</string>
    <string name="approve_contacts_permission">Grant Contacts permission</string>
    <string name="yes_skip_capital">Yes, Skip</string>
    <string name="no_set_as_default_capital">No, Set as Default</string>
    <string name="set_default_phone_app">Set Default Phone App</string>
    <string name="for_handling_calls_it_is_important_to_set_the_app_as_default_text">For optimal call handling, it is important to set the app as your default phone app. Are you sure you want to skip this step?</string>
    <string name="cancel_capital">Cancel</string>
    <string name="battery_saver">Battery Optimization</string>
    <string name="for_the_app_to_run_smoothly_in_the_background_please_set_the_battery_saver">For the app to run smoothly in the background, please set the Battery saver to \'No restrictions\', in the Background Settings, through \'App info\' in Settings. The app is designed for minimum battery use.</string>
    <string name="yes_open_app_info">Yes, open App Info</string>
    <string name="permission_needed_capital_p">Permission Required</string>
    <string name="ask_permission_capital_a">Grant permission</string>
    <string name="close_capital">Close</string>
    <string name="no_open_settings">No, Open Settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="ok">OK</string>
    <string name="permission_could_not_be_granted_automatically">Permission couldn’t be granted automatically. You can enable it in Settings.</string>
    <string name="app_must_have_permission_to_make_calls">In order to make calls, the app must have the proper permission</string>
    <string name="to_add_a_gold_number_please_go_to_settings">To add a Gold Number, please go to Settings by tapping the three-dot menu.</string>
    <string name="permission_was_granted_reloading">Permission was granted! Reloading…</string>
    <string name="view_contacts_permission_was_granted_reloading">View Contacts permission was granted! Reloading…</string>
    <string name="gold_number">Gold Number</string>
    <string name="select_gold_number">Select Gold Number"</string>
    <string name="in_order_to_read_contacts_details_app_must_have_the_proper_permission">In order to read Contacts details, the app must have the proper permission</string>
    <string name="in_order_to_view_calls_history_the_application_must_have_the_proper_permission">In order to view calls history, the app must have the proper permission</string>
    <string name="in_order_to_make_calls_the_application_must_have_the_proper_permission">The app needs Phone permission to make calls, including Quick Call.</string>
    <string name="enable_application_to_show_call_screen_from_background">Enable app to show Call screen from background</string>
    <string name="enable_application_to_show_call_screen_from_background_text">Please enter \'Other Permissions\' and there grant access to \'Display pop-up windows while running in the background\'.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="xiaomi_custom_permission_settings_explain">To let the app show pop-up windows during calls, the \'Draw over other apps\' permission must be enabled in your device settings. On Xiaomi phones, you\'ll need to turn this permission on manually. Tap below to open settings and enable it.</string>
    <string name="default_dialer_permission_was_not_granted_but_needed">Default Phone App (Dialer) permission was not granted but needed for the app to answer calls.</string>
    <string name="make_calls_permission_was_denied_but_needed">Phone (outgoing calls) permission denied, but needed to make outgoing calls.</string>
    <string name="make_calls_permission_was_granted">Make Calls permission was granted!</string>
    <string name="read_contacts_permission_was_granted">Read Contacts permission was granted!</string>
    <string name="read_contacts_permission_was_denied_but_needed">Read Contacts permission was denied but needed in order view Contacts.</string>
    <string name="calls_log_permission_was_granted">Calls Log permission was granted!</string>
    <string name="calls_log_permission_was_denied_but_needed">Calls Log permission was denied but needed in order view calls.</string>
    <string name="overlay_draw_permission_was_granted">Overlay permission granted!</string>
    <string name="to_filter_blocked_contacts_please_set_the_app_as_default">To filter blocked contacts, please set the app as the default app.</string>
    <string name="unknown_blocked">Unknown (Blocked)</string>
    <string name="unknown_because_of_error">Unknown (error)</string>
    <string name="unknown_capital">Unknown</string>
    <string name="it_is_important_to_set_the_app_as_default">It is important to set the app as your default phone app to allow it to handle outgoing calls for you.</string>
    <string name="settings_screen_is_already_opened">Settings screen is already open</string>
    <string name="permissions_screen_is_already_opened">Permissions screen is already open</string>
    <string name="tour_welcome">Welcome!</string>
    <string name="tour_welcome_text">The app was designed specifically to simplify managing and placing calls, in addition to answering incoming calls – by using a large button instead of swiping on the device, an action that can sometimes be challenging for older people.\n\nFamily members can change the settings as needed, making the app both simple and powerful with many features.\n\nManage your calls easily and use the app as your primary dialer for receiving and managing calls.</string>
    <string name="tour_powerful_features">Powerful Features</string>
    <string name="tour_powerful_features_text">The app includes a wide range of useful features, specifically tailored for seniors, to manage all types of calls, both incoming and outgoing.\n\nThe app is designed to be very simple and easy to use, but you can always change the settings easily by tapping on the menu at the top of the screen (tap on the three dots).</string>
    <string name="tour_customizable_settings">Settings</string>
    <string name="tour_customizable_settings_text">In the Settings screen, you can choose who can call you, such as only contacts, only favorites, or only identified numbers.\n\nYou can also restrict outgoing calls if necessary. It is important to remember that Quick Call and the Gold Number will still work even if outgoing calls are restricted or blocked, as they depend solely on the phone\'s outgoing call permission.\n\nAdditionally, you can choose to start calls with the speakerphone on, set the app to answer calls automatically, and access other options that help the app function in the most customized and optimal way for you.</string>
    <string name="tour_auto_answer">Auto Answer</string>
    <string name="tour_auto_answer_text">It is possible to enable the app to automatically answer incoming calls, without the need to press the answer button when a new call is received.\n\nThe app allows the device to ring a few times, so that you will be alerted to the incoming call.\n\nAuto answering can be enabled only for certain contacts, by tapping on them in the Contacts screen and then checking the checkbox.\n\nUsing this option may cause confusion for those who are not accustomed to auto answering, and its use is solely the responsibility of the user.</string>
    <string name="tour_gold_number">Gold Number</string>
    <string name="navigation_fragment_info_label">Info</string>
    <string name="no_calls_found">No calls found.</string>
    <string name="call_report">Call Report</string>
    <string name="premium_capital">Premium</string>
    <string name="welcome_fragment_title">Welcome</string>
    <string name="welcome_fragment_title_explain">The app offers smart features designed to make call management easier</string>
    <string name="welcome_fragment_continue_button">Continue</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>