<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_permissions"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/permissions_capital" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/tour_capital" />
    <item
        android:id="@+id/nav_premium_tour_item"
        android:icon="@drawable/ic_settings_black_24dp"
        android:visible="false"
        android:title="@string/premium_capital" />
    <item
        android:id="@+id/nav_call_report"
        android:icon="@drawable/ic_settings_black_24dp"
        android:visible="false"
        android:title="@string/call_report" />
</menu>