<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.nirotem.simplecall.ui.goldNumber.GoldNumberFragment">

    <!-- TextView for phone number -->

    <ImageView
        android:id="@+id/closeGoldNumberWindow"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:padding="6dp"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="236dp"
        android:layout_height="206dp"
        android:src="@drawable/app_premium_icon_circular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <EditText
        android:id="@+id/goldPhoneNumberText"
        android:layout_width="317dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:background="#1E1E21"
        android:ems="10"
        android:hint="@string/enter_gold_phone_number"
        android:inputType="phone|text"
        android:textColor="#FAF8F8"
        android:textSize="20sp"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/text_gold_phonenumber_label"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/goldPhoneNumberText"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <com.google.android.material.chip.Chip
        android:id="@+id/goldNumberPhoneNumberChip"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:checkable="true"
        android:checked="false"
        android:contentDescription="@string/save_phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <AutoCompleteTextView
        android:id="@+id/goldContactsAutoComplete"
        android:layout_width="317dp"
        android:layout_height="43dp"
        android:background="#1E1E21"
        android:textColor="#FDFDFD"
        android:hint="@string/start_typing_contact_name"
        android:maxLength="40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/existing_contact_label"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/existing_contact"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <com.google.android.material.chip.Chip
        android:id="@+id/goldNumberExistingContactChip"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:checkable="true"
        android:checked="true"
        android:contentDescription="@string/save_existing_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <ImageView
        android:id="@+id/saveGoldNumberButton"
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:background="@drawable/rounded_square_border"
        android:contentDescription="@string/save_gold_number"
        android:padding="4dp"
        android:src="@drawable/savegoldnumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />


</androidx.constraintlayout.widget.ConstraintLayout>