<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="Welcome image"
        android:src="@drawable/logotransparent" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/logoImage"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/logoImage"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:paddingStart="30dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/welcome_fragment_title"
        android:textColor="#FFDE59"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:paddingHorizontal="20dp"
        android:text="@string/welcome_fragment_title_explain"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/bulletList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:fontFamily="@font/open_sans"
        android:orientation="vertical"
        android:padding="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/finishButton"
        android:layout_marginBottom="270dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:background="@color/blue_500"
        android:hint="Please enter password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="gone"
        android:padding="12dp" />

    <RelativeLayout
        android:id="@+id/finishButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/finishButtonImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/welcome_transparent_start_button" />

        <TextView
            android:id="@+id/finishButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins"
            android:paddingTop="5dp"
            android:text="@string/welcome_fragment_continue_button"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </RelativeLayout>


</RelativeLayout>
