<!-- activity_main.xml (activity layout file) -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ספינר -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#090909"
        android:orientation="vertical">

        <!-- ProgressBar -->

        <!-- Call List RecyclerView -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="192dp"
            android:layout_height="514dp"
            android:layout_gravity="center"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/noPermissionsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/noPermissionsCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/no_permission_to_view_calls"
                android:textAlignment="center"
                android:textColor="#AFAFA4"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/calls_history_permissions_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/the_app_needs_view_calls_permission_in_order_to_show_the_call"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <Button
                android:id="@+id/callsHistoryApproveViewCallsPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="16sp"
                android:backgroundTint="#CCCCCC"
                android:textColor="#000000"
                android:padding="16dp"
                android:text="@string/approve_view_calls_permission"

              />

        </LinearLayout>

        <TextView
            android:id="@+id/noCallsAvailableMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_calls_found"
            android:textSize="26sp"
            android:textColor="#D3D3D3"
            android:gravity="center"
            android:visibility="gone"
            android:padding="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
